// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletePolicy expect not to render anything for a closed modal 1`] = `
<DeletePolicy
  isModalOpen={false}
  onDelete={[MockFunction]}
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={[MockFunction]}
>
  <Modal
    actions={
      Array [
        <Unknown
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Unknown>,
        <Unknown
          onClick={[MockFunction]}
          variant="secondary"
        >
          Cancel
        </Unknown>,
      ]
    }
    appendTo={
      <body
        class=""
      >
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-0"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-0"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div />
      </body>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isFooterLeftAligned={true}
    isLarge={false}
    isOpen={false}
    isSmall={true}
    onClose={[MockFunction]}
    showClose={true}
    title="Delete policy"
  >
    <Portal
      containerInfo={<div />}
    >
      <ModalContent
        actions={
          Array [
            <Unknown
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Unknown>,
            <Unknown
              onClick={[MockFunction]}
              variant="secondary"
            >
              Cancel
            </Unknown>,
          ]
        }
        ariaDescribedById=""
        className=""
        hideTitle={false}
        id="pf-modal-1"
        isFooterLeftAligned={true}
        isLarge={false}
        isOpen={false}
        isSmall={true}
        onClose={[MockFunction]}
        showClose={true}
        title="Delete policy"
      />
    </Portal>
  </Modal>
</DeletePolicy>
`;

exports[`DeletePolicy expect to call toggle and onDelete when clicked 1`] = `
<DeletePolicy
  isModalOpen={true}
  onDelete={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <Modal
    actions={
      Array [
        <Unknown
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Unknown>,
        <Unknown
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          variant="secondary"
        >
          Cancel
        </Unknown>,
      ]
    }
    appendTo={
      <body
        class="pf-c-backdrop__open"
      >
        <div
          aria-hidden="true"
        >
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-0"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-0"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
        />
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-2"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </body>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isFooterLeftAligned={true}
    isLarge={false}
    isOpen={true}
    isSmall={true}
    onClose={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    showClose={true}
    title="Delete policy"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-2"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Unknown
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Unknown>,
            <Unknown
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                }
              }
              variant="secondary"
            >
              Cancel
            </Unknown>,
          ]
        }
        ariaDescribedById=""
        className=""
        hideTitle={false}
        id="pf-modal-2"
        isFooterLeftAligned={true}
        isLarge={false}
        isOpen={true}
        isSmall={true}
        onClose={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        showClose={true}
        title="Delete policy"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              _createFocusTrap={[Function]}
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
              tag="div"
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  className=""
                  id="pf-modal-2"
                  isLarge={false}
                  isSmall={true}
                  style={Object {}}
                  title="Delete policy"
                >
                  <div
                    aria-describedby="pf-modal-2"
                    aria-label="Delete policy"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={
                        [MockFunction] {
                          "calls": Array [
                            Array [],
                          ],
                          "results": Array [
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <Component
                        aria-label="Close"
                        className=""
                        onClick={
                          [MockFunction] {
                            "calls": Array [
                              Array [],
                            ],
                            "results": Array [
                              Object {
                                "type": "return",
                                "value": undefined,
                              },
                            ],
                          }
                        }
                        variant="plain"
                      >
                        <ComponentWithOuia
                          component={[Function]}
                          componentProps={
                            Object {
                              "aria-label": "Close",
                              "children": <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                                title={null}
                              />,
                              "className": "",
                              "onClick": [MockFunction] {
                                "calls": Array [
                                  Array [],
                                ],
                                "results": Array [
                                  Object {
                                    "type": "return",
                                    "value": undefined,
                                  },
                                ],
                              },
                              "variant": "plain",
                            }
                          }
                          consumerContext={null}
                        >
                          <Button
                            aria-label="Close"
                            className=""
                            onClick={
                              [MockFunction] {
                                "calls": Array [
                                  Array [],
                                ],
                                "results": Array [
                                  Object {
                                    "type": "return",
                                    "value": undefined,
                                  },
                                ],
                              }
                            }
                            ouiaContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                            variant="plain"
                          >
                            <button
                              aria-disabled={null}
                              aria-label="Close"
                              className="pf-c-button pf-m-plain"
                              disabled={false}
                              onClick={
                                [MockFunction] {
                                  "calls": Array [
                                    Array [],
                                  ],
                                  "results": Array [
                                    Object {
                                      "type": "return",
                                      "value": undefined,
                                    },
                                  ],
                                }
                              }
                              tabIndex={null}
                              type="button"
                            >
                              <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                                title={null}
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                    transform=""
                                  />
                                </svg>
                              </TimesIcon>
                            </button>
                          </Button>
                        </ComponentWithOuia>
                      </Component>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader
                      hideTitle={false}
                    >
                      <Title
                        className=""
                        headingLevel="h1"
                        size="2xl"
                      >
                        <h1
                          className="pf-c-title pf-m-2xl"
                        >
                           
                          Delete policy
                           
                        </h1>
                      </Title>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      id="pf-modal-2"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-2"
                      >
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            Are you sure you want to delete 
                            <b>
                              foo
                            </b>
                            ?
                          </div>
                        </TextContent>
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            This cannot be undone.
                          </div>
                        </TextContent>
                        <br />
                        <Checkbox
                          aria-label="delete-all-reports-checkbox"
                          className=""
                          id="delete-all-reports-1"
                          isChecked={false}
                          isDisabled={false}
                          isValid={true}
                          label="Delete all reports for this policy"
                          onChange={[Function]}
                        >
                          <div
                            className="pf-c-check"
                          >
                            <input
                              aria-invalid={false}
                              aria-label="delete-all-reports-checkbox"
                              checked={false}
                              className="pf-c-check__input"
                              disabled={false}
                              id="delete-all-reports-1"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              className="pf-c-check__label"
                              htmlFor="delete-all-reports-1"
                            >
                              Delete all reports for this policy
                            </label>
                          </div>
                        </Checkbox>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter
                      isLeftAligned={true}
                    >
                      <div
                        className="pf-c-modal-box__footer pf-m-align-left"
                      >
                        <Component
                          aria-label="delete"
                          key="destroy"
                          onClick={[Function]}
                          variant="danger"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-label": "delete",
                                "children": "Delete policy",
                                "onClick": [Function],
                                "variant": "danger",
                              }
                            }
                            consumerContext={null}
                          >
                            <Button
                              aria-label="delete"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="danger"
                            >
                              <button
                                aria-disabled={null}
                                aria-label="delete"
                                className="pf-c-button pf-m-danger"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                Delete policy
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                        <Component
                          key="cancel"
                          onClick={
                            [MockFunction] {
                              "calls": Array [
                                Array [],
                              ],
                              "results": Array [
                                Object {
                                  "type": "return",
                                  "value": undefined,
                                },
                              ],
                            }
                          }
                          variant="secondary"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "children": "Cancel",
                                "onClick": [MockFunction] {
                                  "calls": Array [
                                    Array [],
                                  ],
                                  "results": Array [
                                    Object {
                                      "type": "return",
                                      "value": undefined,
                                    },
                                  ],
                                },
                                "variant": "secondary",
                              }
                            }
                            consumerContext={null}
                          >
                            <Button
                              onClick={
                                [MockFunction] {
                                  "calls": Array [
                                    Array [],
                                  ],
                                  "results": Array [
                                    Object {
                                      "type": "return",
                                      "value": undefined,
                                    },
                                  ],
                                }
                              }
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="secondary"
                            >
                              <button
                                aria-disabled={null}
                                aria-label={null}
                                className="pf-c-button pf-m-secondary"
                                disabled={false}
                                onClick={
                                  [MockFunction] {
                                    "calls": Array [
                                      Array [],
                                    ],
                                    "results": Array [
                                      Object {
                                        "type": "return",
                                        "value": undefined,
                                      },
                                    ],
                                  }
                                }
                                tabIndex={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</DeletePolicy>
`;

exports[`DeletePolicy expect to render an open modal without error 1`] = `
<DeletePolicy
  isModalOpen={true}
  onDelete={[MockFunction]}
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={[MockFunction]}
>
  <Modal
    actions={
      Array [
        <Unknown
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Unknown>,
        <Unknown
          onClick={[MockFunction]}
          variant="secondary"
        >
          Cancel
        </Unknown>,
      ]
    }
    appendTo={
      <body
        class="pf-c-backdrop__open"
      >
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-0"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-0"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </body>
    }
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isFooterLeftAligned={true}
    isLarge={false}
    isOpen={true}
    isSmall={true}
    onClose={[MockFunction]}
    showClose={true}
    title="Delete policy"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-0"
                aria-label="Delete policy"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <h1
                  class="pf-c-title pf-m-2xl"
                >
                   
                  Delete policy
                   
                </h1>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-0"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ?
                  </div>
                  <div
                    class="pf-c-content"
                  >
                    This cannot be undone.
                  </div>
                  <br />
                  <div
                    class="pf-c-check"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="delete-all-reports-checkbox"
                      class="pf-c-check__input"
                      id="delete-all-reports-1"
                      type="checkbox"
                    />
                    <label
                      class="pf-c-check__label"
                      for="delete-all-reports-1"
                    >
                      Delete all reports for this policy
                    </label>
                  </div>
                </div>
                <div
                  class="pf-c-modal-box__footer pf-m-align-left"
                >
                  <button
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Unknown
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Unknown>,
            <Unknown
              onClick={[MockFunction]}
              variant="secondary"
            >
              Cancel
            </Unknown>,
          ]
        }
        ariaDescribedById=""
        className=""
        hideTitle={false}
        id="pf-modal-0"
        isFooterLeftAligned={true}
        isLarge={false}
        isOpen={true}
        isSmall={true}
        onClose={[MockFunction]}
        showClose={true}
        title="Delete policy"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              _createFocusTrap={[Function]}
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
              tag="div"
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  className=""
                  id="pf-modal-0"
                  isLarge={false}
                  isSmall={true}
                  style={Object {}}
                  title="Delete policy"
                >
                  <div
                    aria-describedby="pf-modal-0"
                    aria-label="Delete policy"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={[MockFunction]}
                    >
                      <Component
                        aria-label="Close"
                        className=""
                        onClick={[MockFunction]}
                        variant="plain"
                      >
                        <ComponentWithOuia
                          component={[Function]}
                          componentProps={
                            Object {
                              "aria-label": "Close",
                              "children": <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                                title={null}
                              />,
                              "className": "",
                              "onClick": [MockFunction],
                              "variant": "plain",
                            }
                          }
                          consumerContext={null}
                        >
                          <Button
                            aria-label="Close"
                            className=""
                            onClick={[MockFunction]}
                            ouiaContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                            variant="plain"
                          >
                            <button
                              aria-disabled={null}
                              aria-label="Close"
                              className="pf-c-button pf-m-plain"
                              disabled={false}
                              onClick={[MockFunction]}
                              tabIndex={null}
                              type="button"
                            >
                              <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                                title={null}
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                    transform=""
                                  />
                                </svg>
                              </TimesIcon>
                            </button>
                          </Button>
                        </ComponentWithOuia>
                      </Component>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader
                      hideTitle={false}
                    >
                      <Title
                        className=""
                        headingLevel="h1"
                        size="2xl"
                      >
                        <h1
                          className="pf-c-title pf-m-2xl"
                        >
                           
                          Delete policy
                           
                        </h1>
                      </Title>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      id="pf-modal-0"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-0"
                      >
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            Are you sure you want to delete 
                            <b>
                              foo
                            </b>
                            ?
                          </div>
                        </TextContent>
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            This cannot be undone.
                          </div>
                        </TextContent>
                        <br />
                        <Checkbox
                          aria-label="delete-all-reports-checkbox"
                          className=""
                          id="delete-all-reports-1"
                          isChecked={false}
                          isDisabled={false}
                          isValid={true}
                          label="Delete all reports for this policy"
                          onChange={[Function]}
                        >
                          <div
                            className="pf-c-check"
                          >
                            <input
                              aria-invalid={false}
                              aria-label="delete-all-reports-checkbox"
                              checked={false}
                              className="pf-c-check__input"
                              disabled={false}
                              id="delete-all-reports-1"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <label
                              className="pf-c-check__label"
                              htmlFor="delete-all-reports-1"
                            >
                              Delete all reports for this policy
                            </label>
                          </div>
                        </Checkbox>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter
                      isLeftAligned={true}
                    >
                      <div
                        className="pf-c-modal-box__footer pf-m-align-left"
                      >
                        <Component
                          aria-label="delete"
                          key="destroy"
                          onClick={[Function]}
                          variant="danger"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-label": "delete",
                                "children": "Delete policy",
                                "onClick": [Function],
                                "variant": "danger",
                              }
                            }
                            consumerContext={null}
                          >
                            <Button
                              aria-label="delete"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="danger"
                            >
                              <button
                                aria-disabled={null}
                                aria-label="delete"
                                className="pf-c-button pf-m-danger"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                Delete policy
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                        <Component
                          key="cancel"
                          onClick={[MockFunction]}
                          variant="secondary"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "children": "Cancel",
                                "onClick": [MockFunction],
                                "variant": "secondary",
                              }
                            }
                            consumerContext={null}
                          >
                            <Button
                              onClick={[MockFunction]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="secondary"
                            >
                              <button
                                aria-disabled={null}
                                aria-label={null}
                                className="pf-c-button pf-m-secondary"
                                disabled={false}
                                onClick={[MockFunction]}
                                tabIndex={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</DeletePolicy>
`;
